# dailyEmailNewsDigests

./: .gitignore  README.md  function_app.py  main.py  pyproject.toml  requirements.txt  settings.example.py
.github/workflows/: azure-functions-app-python.yml
src/dailyemailnewsdigests/: config.py
src/dailyemailnewsdigests/blueprints/: bp_digests.py
